# foot-analytics

./: .gitignore  README.md  main.py  pyproject.toml
data/: equipes.csv  joueurs.csv
src/foot_analytics/: __init__.py  dataloader.py  equipe.py  joueur.py  saison.py  visualisation.py
